refactor: line-machine filtering and pagination
